--- a/tbot2_launch/package.xml
+++ b/tbot2_launch/package.xml
@@ -42,6 +42,10 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roslaunch</build_depend>
   <run_depend>roslaunch</run_depend>
+  
+  <!-- sound play needs to be installed -->
+  <build_depend>sound_play</build_depend>
+  <run_depend>sound_play</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
