--- a/tbot2_logging/package.xml
+++ b/tbot2_logging/package.xml
@@ -1,18 +1,11 @@
 <?xml version="1.0"?>
 <package format="2">
 
-  <name>bwi_logging</name>
-  <version>0.3.12</version>
+  <name>tbot2_logging</name>
+  <version>0.0.1</version>
   <description>Logging package that creates ROS bag files</description>
 
-  <author email="shiqi.zhang6@gmail.com">Shiqi Zhang</author>
-  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>
-  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>
-
   <license>BSD</license>
-
-  <url type="repository">https://github.com/utexas-bwi/bwi_common</url>
-  <url type="bugtracker">https://github.com/utexas-bwi/bwi_common/issues</url>
 
   <buildtool_depend>catkin</buildtool_depend>
 
