--- a/tbot2_logging/package.xml
+++ b/tbot2_logging/package.xml
@@ -3,7 +3,10 @@
 
   <name>tbot2_logging</name>
   <version>0.0.1</version>
-  <description>Logging package that creates ROS bag files</description>
+
+  <description>Logging package that creates ROS bag files, repurposed from bwi_logging</description>
+  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>
+
 
   <license>BSD</license>
 
