changed from poi_navigation server to poi_navigator action service

--- a/poi_navigator/package.xml
+++ b/poi_navigator/package.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>poi_navigation</name>
+  <name>poi_navigator</name>
   <version>0.0.0</version>
-  <description>The poi_navigation package</description>
+  <description>The poi_navigator package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="edward.harvey@tufts.edu">Edward Ned Harvey</maintainer>
+  <maintainer email="edward.harvey@todo.todo">turtlebot</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/poi_navigation</url> -->
+  <!-- <url type="website">http://wiki.ros.org/poi_navigator</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
@@ -53,6 +53,10 @@
   <build_depend>rospy</build_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
+  <build_depend>actionlib</build_depend>
+  <build_depend>actionlib_msgs</build_depend>
+  <exec_depend>actionlib</exec_depend>
+  <exec_depend>actionlib_msgs</exec_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
 
