--- a/data_collector/share/traversal_config.yaml
+++ b/data_collector/share/traversal_config.yaml
@@ -1,5 +1,5 @@
-# in my initial data, 1 unit equals about 3.1 ft. So 3.22 units is around 10ft
-sample_distance: 3.22
+# Distance units are meters. Arbitrarily, I want to collect new datapoints every 3 meters.
+sample_distance: 3
 
 # If start_point is specified, you should physically place the turtlebot at that location before launching this
 # program. It should be near waypoint[0] but should not be waypoint[0]. The turtlebot will drive itself to waypoint[0].
@@ -14,8 +14,11 @@ topics: ['camera/depth/image_raw', 'camera/rgb/image_raw', 'amcl_pose']
 # directory will be created if it does not exist
 output_dir: '/home/turtlebot/data_collector_output'
 
-poi_scan_num_stops: 8
-poi_scan_stop_time: 3.0  # sec
+poi_scan_num_stops: 8   # spin one full circle, stop this many times.
+poi_scan_duration: 3.0  # sec
+
+# all spins will start and end by spinning to yaw=0. If this is set to true, one more spin will be done after
+# the spinning data collection, return to the original orientation that the robot had before doing data_scan.
 poi_scan_return_to_original_orientation: True
 
 # If you have existing data, enter their coordinates, like:
@@ -54,8 +57,6 @@ waypoints:
   - foyer_sitting_area
   - foyer_adjacent_rm245_main_office
   - foyer_sitting_area
-  - foyer_adjacent_hall1
-  - hall1_adjacent_foyer
   - hall1_adjacent_rm204_kitchenette
   - hall2_adjacent_hall3_and_kitchenette
   - hall1_adjacent_rm204_kitchenette
