Renamed waypoints, reordered waypoints, tweaked parameters in data collection

--- a/tbot2_data_collection/data_collector/share/traversal_config.yaml
+++ b/tbot2_data_collection/data_collector/share/traversal_config.yaml
@@ -1,5 +1,5 @@
-# Distance units are meters. Arbitrarily, I want to collect new datapoints every 3 meters.
-sample_distance: 3
+# Distance units are meters. Arbitrarily, I want to collect new datapoints every 1 meter.
+sample_distance: 1
 
 # If start_point is specified, you should physically place the turtlebot at that location before launching this
 # program. It should be near waypoint[0] but should not be waypoint[0]. The turtlebot will drive itself to waypoint[0].
@@ -16,6 +16,7 @@ output_dir: '/home/turtlebot/data_collector_output'
 
 poi_scan_num_stops: 8   # spin one full circle, stop this many times.
 poi_scan_duration: 3.0  # sec
+poi_scan_tune_rotation: 1.05  # arbitrarily, it seems to under-rotate about 5% on average, so overrotate 5%
 
 # all spins will start and end by spinning to yaw=0. If this is set to true, one more spin will be done after
 # the spinning data collection, return to the original orientation that the robot had before doing data_scan.
@@ -37,18 +38,14 @@ existing_data: []
 # hallways that were captured, so technically there's a capture already nearby, but you want to capture it anyway
 # due to the fact that the robot can't see through walls.
 force_capture:
-  - rm228_sinapov_lab_adjacent_rm226_graduate_office
+  - rm228_robotics_lab_adjacent_rm226_graduate_office
 
 waypoints:
   - hall2_adjacent_men_restroom
   - hall2_adjacent_rm212_collaboration_room
-  - hall2_adjacent_rm226_graduate_office
   - rm226_graduate_office_adjacent_hall2
-  - rm226_graduate_office_adjacent_rm228_sinapov_lab
-  - rm228_sinapov_lab_adjacent_rm226_graduate_office
-  - rm226_graduate_office_adjacent_rm228_sinapov_lab
+  - rm228_robotics_lab_adjacent_rm226_graduate_office
   - rm226_graduate_office_adjacent_hall2
-  - hall2_adjacent_rm226_graduate_office
   - hall2_adjacent_hall3_and_kitchenette
   - hall3_adjacent_rm227_simulation_lab
   - hall2_adjacent_hall3_and_kitchenette
@@ -61,10 +58,6 @@ waypoints:
   - hall2_adjacent_hall3_and_kitchenette
   - hall1_adjacent_rm204_kitchenette
   - hall1_adjacent_rm212_collab_room
-  - rm212_collaboration_room_adjacent_hall1
-  - rm212_collaboration_room_adjacent_hall2
   - hall2_adjacent_rm212_collaboration_room
-  - rm212_collaboration_room_adjacent_hall2
-  - rm212_collaboration_room_adjacent_hall1
   - hall1_adjacent_rm212_collab_room
   - hall1_adjacent_rm215_prof_rob_jacob
