--- a/tbot2_data_collection/data_collector/share/traversal_config.yaml
+++ b/tbot2_data_collection/data_collector/share/traversal_config.yaml
@@ -18,6 +18,10 @@ poi_scan_num_stops: 8   # spin one full circle, stop this many times.
 poi_scan_duration: 3.0  # sec
 poi_scan_tune_rotation: 1.05  # arbitrarily, it seems to under-rotate about 5% on average, so overrotate 5%
 
+poi_scan_upload_url: 'https://turtlecloud.eecs.tufts.edu/api/v1.0/rosbags/' # must include trailing /
+poi_scan_rm_after_upload: True
+poi_scan_upload_token: ''  # do NOT git commit.
+
 # all spins will start and end by spinning to yaw=0. If this is set to true, one more spin will be done after
 # the spinning data collection, return to the original orientation that the robot had before doing data_scan.
 poi_scan_return_to_original_orientation: False
