--- a/tufts_halligan/maps/real/1/poi_name_locator_locations_1.yaml
+++ b/tufts_halligan/maps/real/1/poi_name_locator_locations_1.yaml
@@ -50,4 +50,22 @@ inside_120:
   x: 12.6
   y: 25.3
   
-
+hallway_outside_122:
+  x: 10.6
+  y: 20.2
+  
+inside_122:
+  x: 13.0
+  y: 19.3
+  
+outside_grad_offices_TODO:
+  x: 11.4
+  y: 14.7
+  
+inside_grad_offices_TODO:
+  x: 9.6
+  y: 13.5
+  
+end_of_hallway_near_extension:
+  x: 18.5
+  y: 14.2
