--- a/tbot2_data_collection/data_collector/share/traversal_config.yaml
+++ b/tbot2_data_collection/data_collector/share/traversal_config.yaml
@@ -9,7 +9,8 @@ sample_distance: 1
 start_point: hall2_adjacent_rm212_collaboration_room
 
 # topics: ['/camera/depth/image_raw', '/usb_cam/image_raw', '/amcl_pose']   # usb_cam for logitech external camera
-topics: ['/camera/depth/image_raw', '/camera/rgb/image_raw', '/amcl_pose', '/people_tracker_measurements']
+topics: ['/camera/depth/image_raw', '/camera/rgb/image_raw', '/amcl_pose', '/people_tracker_measurements', 
+          '/audio' ]
 # topics = ['/odom', '/clock']  # available in gazebo
 
 # directory will be created if it does not exist
